[package]
name = "abes_nice_things"
version = "0.2.0"
edition = "2021"
default-run = "file_comm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bins]]
name = "file_comm"
path = "src/bin/file_comm/main.rs"

[[bins]]
name = "run"
path = "src/bin/run/main.rs"

[dependencies]

[dev-dependencies]

[features]
default = []
dyn_binary = []
