[package]
name = "abes_nice_things"
version = "0.2.0"
edition = "2024"
default-run = "file_comm"
repository = "https://github.com/Course-Brains/abes_nice_things"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bins]]
name = "file_comm"
path = "src/bin/file_comm/main.rs"

[[bins]]
name = "run"
path = "src/bin/run/main.rs"

[[bins]]
name = "bash_install"
path = "src/bin/bash_install/main.rs"

[dependencies]

[features]
default = []
dyn_binary = []
