[package]
name = "abes_nice_things"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/Course-Brains/abes_nice_things"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bins]]
name = "run"
path = "src/bin/run/main.rs"

[dependencies]

[features]
default = []
dyn_binary = []
